--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "deserializer"
   ],
   "author": "Oliver Seitz",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "reflect-metadata": "^0.1.9"
+  }
 }
